<resources>
    <string name="app_name">Octabus</string>
    <string name="erroProcessamento">Não foi possivel obter Resultados</string>
    <string name="aguarde">Aguarde</string>
    <string name="semConexao">Sem Conexão com internet</string>
    <string name="semConexaoGps">Sem Conexão com gps</string>
    <string name="naoFoiPossivelDeslogar">Não foi possivel deslogar</string>
    <string name="aguardeVerificandoVersao">Aguarde... Verificando Versão</string>
    <string name="erroVersao">A versão do seu aplicativo é inferior a versão atual. Solicitamos que atualize seu aplicativo para versão %s para prosseguir.</string>
    <string name="erroPermissao">Você não aplicou todas as permissões necessárias. Feche o aplicativo e tente novamente</string>
    <string name="confirmar">Confirmar</string>
    <string name="erroParametro">Campo necessário</string>
    <string name="buscar">Buscar</string>
    <string name="endereco">Endereço</string>
    <string name="utilizarLocalizacao">Utilizar Localização</string>
    <string name="localizacaoNaoEncontrada">Localização não encontrada</string>
    <string name="tituloPesquisaCarro">Pesquisar Carro</string>
    <string name="tituloPesquisaInfracao">Pesquisar Infração</string>
    <string name="tituloPesquisaFuncionario">Pesquisa Funcionário</string>
    <string name="tituloRecuperarEndereco">Localização</string>
    <string name="tituloTrocarSenha">Trocar Senha</string>
    <string name="codInfracaoOuDescricao">Cód. Infração / Descrição</string>
    <string name="tituloInfracao">Infração</string>
    <string name="tituloComunicacaoChecklist">Comunicar Check List</string>
    <string name="tituloChecklist">Check List</string>
    <string name="tituloCate">Cate</string>
    <string name="tituloRelatorioChefia">Relatório a chefia do tráfego</string>
    <string name="tituloFiscalizacaoSPTrans">Fiscalização SP Trans</string>
    <string name="tituloAcompanhamento">Acompanhamento</string>
    <string name="tituloControlePoluentes">Controle de poluentes</string>
    <string name="tituloEventos">Eventos</string>
    <string name="tituloInformacaoPonto">Informação do ponto</string>
    <string name="tituloComunicacaoInformacaoPonto">Comunicar inf. ponto</string>
    <string name="tituloPontoCritico">Pontos criticos</string>
    <string name="tituloPesquisaFrota">Pesquisa de frota</string>
    <string name="tituloDelegacia">Delegacia</string>
    <string name="tituloForum">Forum</string>
    <string name="tituloRelatarAcidente">Relatar acidente</string>
    <string name="tituloAtropelamentoQuedaAcidental">Atropelamento e queda acidental</string>
    <string name="tituloRav">R.A.V</string>
    <string name="tituloRepasse">Repasse</string>
    <string name="tituloFolhaRendicao">Folha de rendição</string>
    <string name="tituloEficiencia">Eficiencia</string>
    <string name="tituloProgramacao">Programação</string>
    <string name="re">R.E.</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceuSenha">Esqueceu a senha?</string>
    <string name="erroParametroRE">Digite seu R.E</string>
    <string name="erroParametroSenha">Digite sua senha</string>
    <string name="erroUsuarioSenhaIncorreto">Usuário/senha incorreto</string>
    <string name="trocarSenha">Sua solicitação de troca de senha foi efetivada.\nPara trocar a senha preencha os dados abaixo.</string>
    <string name="senhasDiferentes">As senhas não coincidem.</string>
    <string name="codigoRecuperacaoSenha">Código</string>
    <string name="senhaAtualizada">Senha atualizada com sucesso. Faça o login novamente.</string>
    <string name="textoRecuperacaoSenha">Instruções para recuperação de senha.</string>
    <string name="confirmarSenha">Confirmar Senha</string>
    <string name="codigoNaoValidado">Código não validado. Tente Novamente.</string>
    <string name="textoRecuperarSenha">1. Ligue em nossa central de atendimento.\n
        2. Em contato com nossos atendentes, solicite a troca de senha e informe seu R.E. e o codigo abaixo.\n
        3. Após efetivarem no sistema a solicitação, aguarde.\n
        4. Nessa mesma tela você será direcionado automaticamente para cadastrar sua senha novamente.\n
        5. Digite sua nova senha e pronto! Sua nova senha estará cadastrada.\n</string>
    <string name="pontoInicial">T.P.</string>
    <string name="pontoFinal">T.S.</string>
    <string name="tipoDeTabela">Tabela</string>
    <string name="descricaoLinhaPontoInicial">Ponto Inicial</string>
    <string name="descricaoLinhaPontoFinal">Ponto Final</string>
    <string name="sentidoBairro">Sentido Bairro</string>
    <string name="sentidoCentro">Sentido Centro</string>
    <string name="erroRecuperarListagemRotina">Houve um erro ao recuperar a programação</string>
    <string name="tituloServico">Serviços</string>
    <string name="tituloSelecioneServico">Selecione a Opção</string>
    <string name="tituloRelatorio">Relatório</string>
    <string name="menuHome">Inicio</string>
    <string name="menuPerfil">Perfil</string>
    <string name="menuLogout">Encerrar Sessão</string>
    <string name="menuSobreApp">Sobre Aplicativo</string>
    <string name="menuAvaliarApp">Avaliar App</string>
    <string name="menuCompartilhar">Compartilhar</string>
    <string name="menuReportar">Reportar erros / sugestões</string>
    <string name="nomeUsuario">Usuário</string>
    <string name="menuTelefone">Telefones Úteis</string>
    <string-array name="homeServicosTitulos">
        
        <item>@string/tituloInfracao</item>
        
        <item>@string/tituloChecklist</item>
        
        <item>@string/tituloCate</item>
        
        <item>@string/tituloRelatorioChefia</item>
        
        <item>@string/tituloFiscalizacaoSPTrans</item>
        
        <item>@string/tituloAcompanhamento</item>
        
        <item>@string/tituloControlePoluentes</item>
        
        <item>@string/tituloEventos</item>
        
        <item>@string/tituloInformacaoPonto</item>
        
        <item>@string/tituloPontoCritico</item>
        
        <item>@string/tituloPesquisaFrota</item>
        
        <item>@string/tituloDelegacia</item>
        
        <item>@string/tituloForum</item>
        
        <item>@string/tituloRelatarAcidente</item>
        
        <item>@string/tituloAtropelamentoQuedaAcidental</item>
        
        <item>@string/tituloRav</item>
        
        <item>@string/tituloProgramacao</item>
    </string-array>
    <string-array name="homeRelatorioTitulos">
        <item>@string/tituloRepasse</item>
        <item>@string/tituloFolhaRendicao</item>
        <item>@string/tituloEficiencia</item>
        <item>@string/tituloProgramacao</item>
    </string-array>
    <string name="tituloComunicacaoInfracao">Comunicação Infração</string>
    <string name="tituloComunicacaoInfracao1">Informação</string>
    <string name="tituloIncidentesGraves">Incidente Grave</string>
    <string name="tituloDisciplina">Disciplina</string>
    <string name="tituloConsulta">Consulta</string>
    <string name="selecioneInfracao">Selecione a infração</string>
    <string name="selecioneAProgramacao">Selecione a programação</string>
    <string name="selecioneInfrator">Selecione o infrator</string>
    <string name="localizacao">Localizacao</string>
    <string name="complementoCheckList">Complemento</string>
    <string name="complementoInfracao">Complemento</string>
    <string name="descricaoInfracao">Descrição da infração</string>
    <string name="aceitoTermos">Aceita os termos de compromisso?</string>
    <string name="gerarInfracao">Gerar Infração</string>
    <string name="dadosIncidente">Dados do incidente</string>
    <string name="adicionarLocalizacao">+ Localização</string>
    <string name="adicionarFoto">+ Foto</string>
    <string name="tipoInfracao">Tipo de Infração</string>
    <string name="motorista">Motorista</string>
    <string name="cobrador">Cobrador</string>
    <string-array name="tituloServicoInfracao">
        <item>@string/tituloComunicacaoInfracao</item>
        <item>@string/tituloConsulta</item>
    </string-array>
    <string-array name="tituloServicoChecklist">
        <item>@string/tituloComunicacaoChecklist</item>
        <item>@string/tituloChecklist</item>
    </string-array>
    <string-array name="tituloServicoInformacaoPonto">
        <item>@string/tituloComunicacaoInformacaoPonto</item>
        <item>@string/tituloInformacaoPonto</item>
    </string-array>
    <string name="btnSalvar">Salvar</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="checkListSalvo">Checklist Enviado</string>
    <string name="checkListGerada">Checklist Gerado</string>
    <string name="confirmarCheckList">Você aceita os termos que ao gerar um check list incorreto, será penalizado?</string>
    <string name="confirmarInformacaoPonto">Você aceita os termos que ao gerar um informação de ponto incorreto, será penalizado?</string>
    <string name="informacaoPontoGerada">Informação Gerada</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="dadosInfracao">Dados Infração</string>
    <string name="dadosCarro">Dados Carro</string>
    <string name="maisInformacoes">Mais informações</string>
    <string name="carro">Pref. Carro / Linha</string>
    <string name="linha">Linha</string>
    <string name="sentido">Sentido</string>
    <string name="emissor">Emissor</string>
    <string name="cargo">Cargo</string>
    <string name="codInfracao">Cód. Infr.</string>
    <string name="nivelInfracao">Nivel</string>
    <string name="cargoFuncionario">Cargo Funcionário</string>
    <string name="funcionario">Funcionário</string>
    <string name="infracaoGerada">Infração Gerada</string>
    <string name="aguardeEnviandoFoto">Enviando Fotos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url">http://104.154.148.185/Octabus/Aplicativo/reportarErro</string>
</resources>