<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_home"
            android:title="@string/menuHome" />
        <item
            android:id="@+id/navPerfil"
            android:icon="@drawable/ic_account"
            android:title="@string/menuPerfil" />

        <item
            android:id="@+id/navExit"
            android:icon="@drawable/ic_logout"
            android:title="@string/menuLogout" />
    </group>

    <item android:title="@string/app_name">
        <menu>
             <item
                android:id="@+id/navSobre"
                android:icon="@drawable/ic_bookmark"
                android:title="@string/menuSobreApp" />
            <item
                android:id="@+id/navAvaliar"
                android:icon="@drawable/ic_star"
                android:title="@string/menuAvaliarApp" />
            <item
                android:id="@+id/navTelefones"
                android:icon="@drawable/ic_phone_black_24dp"
                android:title="@string/menuTelefone" />

            <item
                android:id="@+id/navReportar"
                android:icon="@drawable/ic_problem"
                android:title="@string/menuReportar" />
        </menu>
    </item>

</menu>
